# zmteam-test-task

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 9e0d81720d41_create_task.py
app/: auth.py  dependencies.py  main.py
app/api/api_v1/: __init__.py  tasks.py
app/crud/: __init__.py  base.py  exeptions.py  task.py
app/infrastructure/: __init__.py  config.py  db_connection.py  logger.py
app/models/: __init__.py  base.py  task.py
app/schemas/: __init__.py  jwt_token.py  task.py
app/tests/: conftest.py
app/tests/api/: test_tasks_api.py
